automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
   <title>Lists Lab</title>
 </head>
 <body>
-
+  <ul>
+    <li>thing 1</li>
+    <li>thing 2</li>
+    <li>thing 3</li>
+  </ul>
   <!-- Write your HTML in this file -->
 
 </body>
