automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <ul>
     <li>thing 1</li>
     <li>thing 2</li>
+      <ul>
+        <li>thing2.5</li>
+      </ul>
     <li>thing 3</li>
   </ul>
   <!-- Write your HTML in this file -->
