--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
     <li>thing 3</li>
   </ul>
   <!-- Write your HTML in this file -->
-
+  <<ol>
+    <li>thing 1</li>
+    <li>thing 2</li>
+    <li>thing 3</li>
+  </ol>
 </body>
 </html>
 
