--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@
   <title>Lists Lab</title>
 </head>
 <body>
-
+  <ul>
+    <li>thing 1</li>
+    <li>
+      <ul>
+        <li>thing 2</li>
+      </ul>
+    </li>
+    <li>thing 3</li>
+  </ul>
   <!-- Write your HTML in this file -->
-
+  <ol>
+    <li>thing 1</li>
+    <li>thing 2</li>
+    <li>thing 3</li>
+  </ol>
 </body>
 </html>
 
